force-app/main/default/objects/Opportunity_Pricebook__c/Opportunity_Pricebook__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This setting is created to hold the data of the price book along with the  related Account and LOM attributes.</description>
    <label>Opportunity Pricebook</label>
</CustomObject>