force-app/main/default/objects/Opportunity_Pricebook__c/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <description>This field is to store the currency code of the Opportunity</description>
    <label>Currency Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>