force-app/main/default/objects/Opportunity_Pricebook__c/fields/Line_Of_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Line_Of_Business_Type__c</fullName>
    <label>Line Of Business Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>