force-app/main/default/objects/Opportunity_Pricebook__c/fields/LOB_Region__c.field-meta.xml
<CustomField>
    <fullName>LOB_Region__c</fullName>
    <label>LOB Region</label>
    <length>80</length>
    <type>Text</type>
</CustomField>