force-app/main/default/objects/Opportunity_Pricebook__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <description>This field is to store the value of the Price book</description>
    <label>Price Book</label>
    <length>25</length>
    <type>Text</type>
</CustomField>