force-app/main/default/objects/Opportunity_Pricebook__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Currency_Code__c</columns>
    <columns>Line_Of_Business_Type__c</columns>
    <columns>LOB_Region__c</columns>
    <columns>Price_Book__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>